--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@fullcalendar/angular": "^5.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/list": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
     "bootstrap": "^4.5.3",
     "firebase": "^9.4.0",
-    "primeflex": "^3.1.0",
+    "primeflex": "^3.1.2",
     "primeicons": "^5.0.0",
     "primeng": "^13.0.2",
     "rxfire": "^6.0.0",
