--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@fullcalendar/timegrid": "^5.10.1",
     "bootstrap": "^4.5.3",
     "firebase": "^9.4.0",
-    "primeflex": "^3.1.2",
+    "primeflex": "2.0.0",
     "primeicons": "^5.0.0",
     "primeng": "^13.0.2",
     "rxfire": "^6.0.0",
