--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@fullcalendar/interaction": "^5.10.1",
     "@fullcalendar/list": "^5.10.1",
     "@fullcalendar/timegrid": "^5.10.1",
+    "angularfire2": "^5.4.2",
     "bootstrap": "^4.5.3",
     "firebase": "^9.4.0",
+    "moment": "^2.29.1",
     "primeflex": "2.0.0",
     "primeicons": "^5.0.0",
     "primeng": "^13.0.2",
